--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <div>
+      <% if logged_in? %>
+        <div class="menu">
+        <i class="fas fa-home"></i> <%= link_to "Home", plaints_path,  class: "link" %> |
+        <%= link_to 'New plaint', new_plaint_path, class: "link" %> |
+        <%= link_to 'Change profil', edit_user_path(current_user.id), class: "link" %> |
+        <%= link_to 'My page', user_path(current_user.id), class: "link" %> |
+        <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_path %> |
+        <%= link_to "Login", new_session_path %>
+        </div>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
