--- a/app/views/punctualities/index.html.erb
+++ b/app/views/punctualities/index.html.erb
@@ -1,5 +1,15 @@
 <h1>Punctualities list</h1>
 <p><%= notice %></p>
+
+<nav class="navbar navbar-light bg-light">
+<%= form_with url: punctualities_path, method: :get, html: {class: "form-inline"} , local: true do |form| %>
+  <%= form.label :date, "Task name:" %>
+  <%= form.date_select :date, class: "form-control mr-sm-2" %>
+  <%= form.submit value: "search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit" %>
+<% end %>
+</nav>
+<br>
+
 <table class="table table-hover">
   <thead>
   <tr>
