--- a/app/views/plaints/index.html.erb
+++ b/app/views/plaints/index.html.erb
@@ -1,10 +1,18 @@
 <h1>Plaints index</h1>
 <p><%= notice %></p>
+<nav class="navbar navbar-light bg-light">
+<%= form_with url: plaints_path, method: :get, html: {class: "form-inline"} , local: true do |form| %>
+  <%= form.label :category_id, "Search by category:" %>
+  <%= form.select :category_id, Category.all.collect { |l| [ l.name, l.id ] }, include_blank: true %>
+  <%= form.submit value: "search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit" %>
+<% end %>
+</nav>
 <table class="table table-hover">
   <thead>
   <tr>
     <th scope="col">Title</th>
     <th scope="col">Description</th>
+    <th scope="col">Category</th>
     <th scope="col">Remarks</th>
   </tr>
 </thead>
@@ -13,6 +21,11 @@
   <tr >
     <td class="plaint_row" scope="row"><%= plaint.title %></td>
     <td><%= plaint.description %></td>
+    <td>
+      <% plaint.categories.pluck(:name).each do |plaint_category| %>
+      <span> <%= plaint_category %> </span>
+      <% end %>
+    </td>
     <td class="priority_row"><%= plaint.remarks %></td>
     <td><%= link_to 'See details', plaint_path(plaint.id) %></td>
     <td><%= link_to "Modifier", edit_plaint_path(plaint.id) %></td>
