--- a/app/views/punctualities/index.html.erb
+++ b/app/views/punctualities/index.html.erb
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-light bg-light">
 <%= form_with url: punctualities_path, method: :get, html: {class: "form-inline"} , local: true do |form| %>
-  <%= form.label :date, "Task name:" %>
+  <%= form.label :date, "Search by date:" %>
   <%= form.date_select :date, class: "form-control mr-sm-2" %>
   <%= form.submit value: "search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit" %>
 <% end %>
