--- a/app/views/plaints/index.html.erb
+++ b/app/views/plaints/index.html.erb
@@ -37,5 +37,4 @@
 
 <br>
 
-<%= link_to 'Create a new plaint', new_plaint_path, class: "badge badge-success" %> || <%= paginate @plaints %>
-
+<%= link_to 'Create a new plaint', new_plaint_path, class: "badge badge-success" %>
