--- a/app/views/punctualities/index.html.erb
+++ b/app/views/punctualities/index.html.erb
@@ -31,5 +31,4 @@
 
 <br>
 
-<%= link_to 'Create a new punctuality', new_punctuality_path, class: "badge badge-success" %> || <%= paginate @punctualities %>
-
+<%= link_to 'Create a new punctuality', new_punctuality_path, class: "badge badge-success" %> 
