--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= link_to "Punctualities", punctualities_path %>
+      <%= link_to "Punctualities list", punctualities_path %>
+      <%= link_to 'New punctuality', new_punctuality_path, class: "link" %>
+      <%= link_to "Plaints", plaints_path %>
+      <%= link_to 'Account', user_path(current_user.id), class: "link" %> 
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "sign up", new_user_registration_path %>
