--- a/app/views/admin/plaints/index.html.erb
+++ b/app/views/admin/plaints/index.html.erb
@@ -1,6 +1,12 @@
 <h1>Plaints index</h1>
 <p><%= notice %></p>
-
+<nav class="navbar navbar-light bg-light">
+<%= form_with url: admin_plaints_path, method: :get, html: {class: "form-inline"} , local: true do |form| %>
+  <%= form.label :category_id, "Search by category:" %>
+  <%= form.select :category_id, Category.all.collect { |l| [ l.name, l.id ] }, include_blank: true %>
+  <%= form.submit value: "search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit" %>
+<% end %>
+</nav>
 <table class="table table-hover">
   <thead>
   <tr>
@@ -23,6 +29,7 @@
     </td>
     <td class="priority_row"><%= plaint.remarks %></td>
     <td> <%= plaint.user.name %> </td>
+    <td><%= link_to 'Resolved', edit_admin_plaint_path(plaint.id) %></td>
   </tr>
 <% end %>
 </tbody>
