Send email when postind or resolved a plaint

--- a/app/views/plaints/show.html.erb
+++ b/app/views/plaints/show.html.erb
@@ -2,5 +2,9 @@
 <p>Name: <%= @plaint.title %></p>
 <p>Description: <%= @plaint.description %></p>
 <p>Remarks: <%= @plaint.remarks %></p>
+Categories: <% @plaint.categories.pluck(:name).each do |plaint_category| %>
+	<span> <%= plaint_category %> </span>
+<% end %>
+<br>
 <%= link_to "Edit plaint", edit_plaint_path(@plaint.id), class: "badge badge-success" %>
 <%= link_to "Back to the plaint list", plaints_path, class: "badge badge-success" %>
