--- a/app/views/admin/plaints/_edit.html.erb
+++ b/app/views/admin/plaints/_edit.html.erb
@@ -1,11 +1,3 @@
-<h1>Plaints index</h1>
-<nav class="navbar navbar-light bg-light">
-<%= form_with url: admin_plaints_path, method: :get, html: {class: "form-inline"} , local: true do |form| %>
-  <%= form.label :category_id, "Search by category:" %>
-  <%= form.select :category_id, Category.all.collect { |l| [ l.name, l.id ] }, include_blank: true %>
-  <%= form.submit value: "search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit" %>
-<% end %>
-</nav>
 <table class="table table-hover" id="table">
   <thead>
   <tr>
@@ -18,7 +10,7 @@
   </tr>
 </thead>
 <tbody>
-<% @plaints.each do |plaint| %>
+<% plaints.each do |plaint| %>
   <tr id="plaint_<%= plaint.id %>">
     <td class="plaint_row" scope="row"><%= plaint.title %></td>
     <td><%= plaint.description %></td>
@@ -41,6 +33,3 @@
 <% end %>
 </tbody>
 </table>
-<%= link_to "Back", :back, class: "btn btn-dark" %>
-
-
