--- a/app/views/admin/plaints/index.html.erb
+++ b/app/views/admin/plaints/index.html.erb
@@ -41,6 +41,9 @@
 <% end %>
 </tbody>
 </table>
+
+<%= pie_chart PlaintCategory.group(:category_id).count %>
 <%= link_to "Back", :back, class: "btn btn-dark" %>
+<p><%= paginate @plaints %></p>
 
 
