Gestion de system rspec

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -24,7 +24,7 @@
     <%= f.password_field :password_confirmation, placeholder: "Password confirmation..." %> 
     <br>
     <br>
-    <%= f.submit "Create my account", class: "submit" %> 
+    <%= f.submit "Modify account", class: "submit" %> 
   <% end %>
 </div>
 <%= link_to "Back", :back %>
