--- a/app/views/plaints/_form.html.erb
+++ b/app/views/plaints/_form.html.erb
@@ -17,7 +17,7 @@
   
   <div class="plaint_title form-group">
     <%= form.label :Description %>
-    <%= form.text_field :description, class: "form-control" %>
+    <%= form.text_field :description, id: "description", class: "form-control" %>
   </div> 
   <div class="plaint_title form-group">
     <%= form.label :Remarks %>
