--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background: url(/back.jpg) center fixed;
+  background: center fixed;
   flex-direction: column;
   align-items: center;
   text-align: center;
