--- a/app/views/statics/top.html.erb
+++ b/app/views/statics/top.html.erb
@@ -1,11 +1,38 @@
-<h1>Welcome on <strong>Plaints & Punctualities</strong> </h1>
-<h2>Product Overview</h2>
-<p>											
-	"Plaints & Punctuality" is a system that manages the working hours of the users,										
-	making sure that they have done the minimum amount of work and helping the administrator 										
-	to improve the services of the department and the cohesion of his team.	</p>
+<div class="container" id="top">
+	<div class="row">
+		<h1>Welcome on <strong>Plaints & Punctualities</strong> </h1>
+	</div>
+	<br>
+	<br>
+	<div class="row">
+		<div class="col-md-6 top">
+			<h2>Product Name</h2>
+			<br>
+			<h4>							
+				An application for managing punctuality and complaints within the human resources department.
+			</h4>
 
-<h2>Product Name</h2>
-<p>							
-"Plaints & Punctuality", an application for managing punctuality 							
-and complaints within the human resources department.</p>
+		</div>
+		<div class="col-md-6 vert">
+			<h2 class="ver">Plaints</h2>
+			<br>
+			
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 vert">
+			<h2 class="ver">Punctualities</h2>
+			
+
+		</div>
+		<div class="col-md-6 top">
+			<h2>Product Overview</h2>
+			<br>
+			<h4>											
+				It is a system that manages the working hours of the users,					
+				making sure that they have done the minimum amount of work and helping the administrator 										
+				to improve the services of the department and the cohesion of his team.	
+			</h4>
+		</div>
+	</div>
+</div>
