--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,45 @@
-<h2>Sign up</h2>
+<div class="container-parent">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 ac" id="right">
+        <h2> Welcome Back! </h2>
+        <h3>To keep connected with us please login with your personnal info</h3>
+        <br>
+        <%- if controller_name != 'sessions' %>
+          <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-primary" %><br />
+        <% end %>
+      </div>
+      <div class="col-md-8 ac">
+        <%= image_tag("/logo2.png", style: "height:100px;width:100px;") %>
+        <h2>Sign up</h2>
+        <hr>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="form">
-  <div class="form-group">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, id: "name", autofocus: true, autocomplete: "name"%>
+          <div class="form-group">
+            <%= f.text_field :name, id: "name", autofocus: true, autocomplete: "name", placeholder: "Name...", class: "input"%>
+          </div>
+
+          <div class="form-group">
+            <%= f.email_field :email, id: "email", autocomplete: "email", placeholder: "Email...", class: "input" %>
+          </div>
+
+          <div class="form-group as">
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> char. mini)</em>
+            <br>
+            <% end %>
+            <%= f.password_field :password, id: "password", autocomplete: "new-password", placeholder: "Password...", class: "input" %>
+
+          </div>
+
+          <div class="form-group">
+            <%= f.password_field :password_confirmation, id: "password_confirmation", autocomplete: "new-password", placeholder: "Password_confirmation...", class: "input" %>
+          </div>
+
+            <%= f.submit "Sign up", class: "btn btn-primary", value: "Register" %>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, id: "email", autocomplete: "email" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, id: "password", autocomplete: "new-password" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, id: "password_confirmation", autocomplete: "new-password" %>
-  </div>
-
-    <%= f.submit "Sign up", class: "btn btn-primary", value: "Register" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
