--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -11,12 +11,12 @@
       <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em><br />
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input" %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", placeholder: "New_password...", class: "input" %>
     </div>
 
     <div class="field">
       <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "password_confirmation..." ,class: "input" %>
     </div>
 
     <div class="actions">
