--- a/app/views/statics/top.html.erb
+++ b/app/views/statics/top.html.erb
@@ -1,16 +1,38 @@
+<nav class="navbar navbar-default">
+  	<div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+	        <span class="sr-only">Bootstrap</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <%= image_tag("/logo2.png", style: "height:120px;width:120px;") %>
+	    </div>
+	    <div id="gnavi" class="collapse navbar-collapse justify-content-end">
+	      <ul class="nav navbar-nav ">
+	            <li class="nav-item"><%= link_to 'Sign In', new_user_session_path, class: "nav-link" %> </li>
+	            <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %></li>
+	      </ul>
+	    </div>
+  	</div>
+ </nav>
+ 
+
 <div class="container" id="top">
 	<div class="row">
 		<h1>Welcome on <strong>Plaints & Punctualities</strong> </h1>
+		<%= link_to "Guest login general", statics_guest_login_path, class: "btn btn-primary guest" %>
+		<%= link_to "Guest login admin", statics_administrator_guest_login_path, class: "btn btn-primary guest" %>
 	</div>
 	<br>
 	<br>
 	<div class="row">
 		<div class="col-md-6 top">
 			<h2>Product Name</h2>
-			<br>
-			<h4>							
+			<p>							
 				An application for managing punctuality and complaints within the human resources department.
-			</h4>
+			</p>
 
 		</div>
 		<div class="col-md-6 vert">
@@ -27,12 +49,18 @@
 		</div>
 		<div class="col-md-6 top">
 			<h2>Product Overview</h2>
-			<br>
-			<h4>											
+			<p>											
 				It is a system that manages the working hours of the users,					
 				making sure that they have done the minimum amount of work and helping the administrator 										
 				to improve the services of the department and the cohesion of his team.	
-			</h4>
+			</p>
 		</div>
 	</div>
 </div>
+
+<footer class="bg-light text-center text-lg-start">
+  <div class="text-center p-3" style="background-color: #ccd9ff;">
+    © 2021 Copyright:
+    <span class="text-dark" href="#">Plaints & Punctuality</span>
+  </div>
+</footer>
